--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.24.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router": "^6.1.1",
     "react-router-dom": "^6.1.1",
